# socrates-anonymized

./: README.md
SocRATES/: BTLibrary.yaml  LICENSE  (+11 more)
hunav_gazebo_wrapper/: CMakeLists.txt  README.md  package.xml
hunav_gazebo_wrapper/config/: launch_params.yaml  params.yaml  robot_poses.yaml  trajectory.json
hunav_gazebo_wrapper/include/hunav_gazebo_wrapper/: HuNavPlugin.h  video_recorder_node.hpp
hunav_gazebo_wrapper/launch/: nav2_follow_waypoints.launch.py  rviz_launch.py  scenario_lino.launch.py  scenario_nav2_lino.launch.py  scenario_nav2_lino_all.launch.py  tb3_scenario_nav2.launch.py
hunav_gazebo_wrapper/launch/sublaunch/: gazebo_spawn_robot.launch.py  hunavsim.launch.py  hunavsim_world_gen.launch.py
hunav_gazebo_wrapper/nav2_params/: mppi.yaml  mppi_plugged.yaml  nav2can.yaml
hunav_gazebo_wrapper/scripts/: gesture_listener.py  scenario_manager.py  shutdown_demo_node.py  waypointfollow.py
hunav_gazebo_wrapper/src/: HuNavPlugin.cpp  WorldGenerator.cpp  video_recorder.cpp  video_recorder_node.cpp
hunav_gazebo_wrapper/worlds/: empty_cafe.world  example_cafe.world  gazebo_multi_video_monitor_plugin.sdf  no_roof_small_warehouse.world
hunav_gazebo_wrapper/worlds/arena_nus_com1_building/: camera_position.json  scene_graph.json  scene_graph_new.json
hunav_gazebo_wrapper/worlds/arena_nus_com1_building/worlds/: arena_nus_com1_building.world  arena_nus_com1_building_walled_og.world
hunav_gazebo_wrapper/worlds/hospital/: camera_position.json  scene_graph.json
hunav_gazebo_wrapper/worlds/hospital_mini_elevator/: scene_graph_new.json
hunav_gazebo_wrapper/worlds/small_warehouse/: camera_position.json  scene_graph_old.json
(+86 files in other folders)
